--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ h1 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 70px;
-    margin-top: 100px;
+    margin-top:80px;
 }
 
 .photographer_section article {
@@ -41,10 +41,34 @@ h1 {
 
 .photographer_section article h2 {
     color: #D3573C;
-    font-size: 36px;
+    font-size: 2.25em;
+    margin: 5% 0 0% 0;
+}
+.photographer_section article h3 {
+    color: #901C1C;
+    font-size: 0.813em;
+    margin: 1% 0;
+   
 }
 
+.photographer_section article p {
+    color: #000000;
+    font-size: 0.625em;
+    margin: 1% 0;
+   
+}
+.photographer_section article div {
+    color: #757575;
+    font-size: 0.563em;
+    margin: 2% 0;
+   
+}
 .photographer_section article img {
     height: 200px;
     width: 200px;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 50%;
+    box-shadow: 0px 4px 12px 0px #00000040;
+
 }
