header detail photographer

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,76 +1,333 @@
 #contact_modal {
-    display: none;
+	display: none;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	background-color: #fafafa80;
 }
 
-.photograph-header {
-    background-color: #FAFAFA;
-    height: 300px;
-    margin: 0 100px;
+#media_modal {
+	display: none;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	background-color: #fafafa;
+}
+
+#left-arrow,
+#right-arrow {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	font-size: 5rem;
+	color: #901c1c;
+	background-color: transparent;
+	border: none;
+}
+
+#left-arrow {
+	left: 20%;
+}
+
+#right-arrow {
+	right: 20%;
+}
+
+#media_modal > button:nth-child(3) {
+	cursor: pointer;
+	position: absolute;
+	top: 10%;
+	right: 20%;
+	border: none;
+	background-color: transparent;
+}
+
+#media_modal svg path {
+	fill: #901c1c;
+}
+
+#media_modal > div {
+	position: absolute;
+	width: 50%;
+	height: 80vh;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+#media_modal > div img,
+#media_modal > div video {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+#media_modal span {
+	color: #901c1c;
+	font-size: 1.25em;
+}
+
+
+/* css header page photographer */
+
+.photograph-header .container_photo{
+	height: 300px;
+	margin: 0 100px;
+	padding: 0 75px;
+	background-color: #fafafa;
+
+}
+
+.photograph_infos .container_photo{
+	display: flex; 
+	justify-content: space-between;
+	align-items: center; 
+	flex-direction: row;
+
+}
+
+
+.infosphotographe{
+	display: flex; 
+	justify-content: space-between;
+	flex-direction: column;
+}
+
+.infosphotographe > h2 {
+	color: #D3573C;
+	font-size: 3em;
+	margin: 0.5em 0;
+}
+
+.photographerCity {
+	color: #901c1c;
+	font-size: 1.2em;
+    font-weight: 600;
+    text-transform: capitalize;
+    font-style: normal;
+}
+
+
+.photograph-header img {
+	width: 200px;
+	height: 200px;
+	object-fit: cover;
+	border-radius: 100%;
 }
 
 .contact_button {
-    font-size: 20px;
-    font-weight: bold;
-    color: white;
-    padding: 11px;
-    width: 170px;
-    height: 70px;
-    border: none;
-    background-color: #901C1C;
-    border-radius: 5px;
-    cursor: pointer;
+	cursor: pointer;
+	width: 170px;
+	height: 70px;
+	padding: 11px;
+	font-size: 20px;
+	font-weight: bold;
+	color: white;
+	border: none;
+	background-color: #901c1c;
+	border-radius: 5px;
+}
+
+/* ******** */
+.photographermedia_section{
+display: flex;
+flex-wrap: wrap;
+justify-content: space-evenly;
+margin: 0;
+padding: 50px;
+}
+
+
+.article_media{
+width: 300px;
+height: 350px;
+background-color: #fafafa;
+margin: 20px;
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+align-items: center;
+border-radius: 5px;
+overflow: hidden;
+}
+
+.div_media{
+width: 100%;
+height: 300px;
+object-fit: cover;
+object-position: center;
+overflow: hidden;
+}
+
+.photo{
+width: 100%;
+height: 100%;
+object-fit: cover;
+object-position: center;
+}
+
+.infoPhoto{
+width: 100%;
+height: 50px;
+display: flex;
+justify-content: space-between;
+align-items: center;
+background-color: white;
+
+}
+
+.titlePhoto {
+font-size: 16px;
+font-weight: bold;
+color: #901c1c;
+text-align: center;
+padding: 0 10px ;
+}
+
+.like{
+font-weight: bold;
+font-size: 16px;
+color: #901c1c;
+padding: 0 10px 
+}
+
+/* ***** */
+
+#select {
+	margin: 25px 100px;
+}
+
+#select > label {
+	margin-right: 25px;
+	font-weight: bold;
+}
+
+#orderSelect {
+	height: 50px;
+	padding: 0 10px;
+	background-color: #901c1c;
+	border-radius: 5px;
+	color: white;
+}
+
+#photograph_medias {
+	margin: 100px;
+	margin-top: 50px;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 75px 100px;
+}
+
+#photograph_medias a {
+	text-decoration: none;
+}
+
+#photograph_medias article {
+	width: 100%;
+	height: 100%;
+}
+
+#photograph_medias img,
+#photograph_medias video {
+	cursor: pointer;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	border-radius: 5px;
+}
+
+#photograph_medias div {
+	color: #901c1c;
+	font-size: 1.25em;
+	display: flex;
+	justify-content: space-between;
+}
+
+#photograph_medias div span:last-child {
+	cursor: pointer;
+}
+
+.photograph_likeprice {
+	width: 225px;
+	position: fixed;
+	bottom: 0;
+	right: 2rem;
+	padding: 15px 20px;
+	font-weight: bold;
+	background-color: #db8876;
+	border-radius: 10px 10px 0 0;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .modal {
-    border-radius: 5px;
-    background-color: #DB8876;
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding: 35px;
-    margin: auto;
+	width: 50%;
+	height: fit-content;
+	margin: auto;
+	padding: 35px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	border-radius: 5px;
+	background-color: #db8876;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .modal header {
-    justify-content: space-between;
-    width: 100%;
+	width: 100%;
+	justify-content: space-between;
 }
 
 .modal header img {
-    cursor: pointer;
+	cursor: pointer;
 }
 
 .modal header h2 {
-    font-size: 64px;
-    font-weight: normal;
-    text-align: center;
+	font-size: 64px;
+	font-weight: normal;
+	text-align: center;
 }
 
 form {
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    align-items: flex-start;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
 }
 
 form label {
-    color: #312E2E;
-    font-size: 36px;
+	color: #312e2e;
+	font-size: 36px;
 }
 
 form div {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    align-items: self-start;
-    margin-bottom: 26px;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: self-start;
+	margin-bottom: 26px;
 }
 
 form input {
-    width: 100%;
-    height: 68px;
-    border: none;
-    border-radius: 5px;
+	width: 100%;
+	height: 68px;
+	border: none;
+	border-radius: 5px;
+}
+
+form textarea {
+	width: 100%;
+	height: 68px;
+	border: none;
+	border-radius: 5px;
+	resize: vertical;
 }
