--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,11 @@
 @import url("photographer.css");
 
 body {
+    display: flex;
+    flex-direction: column;
+    max-width: 1440px;
     font-family: "DM Sans", sans-serif;
-    margin: 0;
+    margin: auto;
 }
 
 
@@ -27,11 +30,11 @@ h1 {
 .photographer_section {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 70px;
-    margin-top:80px;
+    gap: 50px;
+    margin-top:50px;
 }
 
-.photographer_section article {
+.photographer_section .card_photographer {
     justify-self: center;
     display: flex;
     justify-content: center;
@@ -39,36 +42,70 @@ h1 {
     flex-direction: column;
 }
 
-.photographer_section article h2 {
+.photographer_section .container_photo {
+  
+    justify-content: center;
+    text-align: center;
+
+  }
+
+.photographer_section .photographerName {
     color: #D3573C;
-    font-size: 2.25em;
+    font-size: 2em;
     margin: 5% 0 0% 0;
-}
-.photographer_section article h3 {
-    color: #901C1C;
-    font-size: 0.813em;
-    margin: 1% 0;
+    display: flex;
+    justify-content: center;
    
+}
+.photographer_section .photographerCity {
+    display: flex;
+    justify-content: center;
+    color: #901c1c;
+    font-weight: 700;
+    text-transform: capitalize;
+    font-style: normal;
+    font-size: 1rem;
 }
 
-.photographer_section article p {
+.photographer_section .slogan {
     color: #000000;
-    font-size: 0.625em;
+    display: flex;
+    justify-content: center;
+    font-size: 0.8rem;
+    font-weight: 600;
     margin: 1% 0;
    
 }
-.photographer_section article div {
+.photographer_section .prix {
     color: #757575;
-    font-size: 0.563em;
+    display: flex;
+  justify-content: center;
+  font-size: 0.7rem;
+  font-weight: 500;
     margin: 2% 0;
    
 }
-.photographer_section article img {
-    height: 200px;
-    width: 200px;
+.photographer_section  .divPortrait{
+    display: flex;
+    margin: 0 auto;
+    height: 10rem;
+    width: 10rem;
+    overflow: hidden;
+    margin-bottom: 1.67rem;
+   border-radius: 50%;
+    justify-content: center;
+    box-shadow: 0px 4px 12px 0px #00000040;
+}
+.photographer_section .img_photographe {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     object-position: center;
     border-radius: 50%;
-    box-shadow: 0px 4px 12px 0px #00000040;
+}
 
+
+.photographer_section .card_photographer  a {
+  text-decoration: none;
+  cursor: pointer;
 }
