--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,12 +1,4 @@
-#contact_modal {
-	display: none;
-	width: 100%;
-	height: 100%;
-	position: fixed;
-	top: 0;
-	left: 0;
-	background-color: #fafafa80;
-}
+
 
 #media_modal {
 	display: none;
@@ -89,8 +81,6 @@
 	flex-direction: row;
 
 }
-
-
 .infosphotographe{
 	display: flex; 
 	justify-content: space-between;
@@ -118,7 +108,7 @@
 	object-fit: cover;
 	border-radius: 100%;
 }
-
+.submit_button,
 .contact_button {
 	cursor: pointer;
 	width: 170px;
@@ -264,70 +254,128 @@ padding: 0 10px
 	justify-content: space-between;
 	align-items: center;
 }
-
+/***modal form***/
+#contact_modal {
+	display: none;
+    position: fixed;
+    justify-content: center;
+    align-items: center;
+    top: 0px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.5);
+}
 .modal {
-	width: 50%;
-	height: fit-content;
-	margin: auto;
-	padding: 35px;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	border-radius: 5px;
-	background-color: #db8876;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: space-between;
+border-radius: 5px;
+background-color: #db8876;
+height: fit-content;
+width: 50%;
+margin: auto;
+border-radius: 10px;
+display: flex;
+flex-direction: column;
+position: relative;
+top: 5%;
+padding: 5px 35px;
+box-sizing: border-box;
 }
 
 .modal header {
-	width: 100%;
-	justify-content: space-between;
+justify-content: space-between;
+align-content: start;
+width: 100%;
+padding-top: 15px;
+height: 10%;
+box-sizing: content-box;	
+
 }
 
-.modal header img {
-	cursor: pointer;
+.close {
+cursor: pointer;
+display: flex;
+align-self: flex-start;
+padding-top: 10px;
+width: 35px;
 }
+
+
 
 .modal header h2 {
-	font-size: 64px;
-	font-weight: normal;
-	text-align: center;
+font-size: 2.7em;
+font-weight: normal;
+margin:inherit;
 }
 
+#modalTitle{
+text-align: center;	
+}
 form {
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
+width: 100%;
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+padding-bottom: 20px;
+padding-top: 5%;
 }
 
 form label {
-	color: #312e2e;
-	font-size: 36px;
+color: #312e2e;
+font-size: 1.5rem;
+line-height: 1;
+margin-bottom: 8px;
 }
 
 form div {
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	align-items: self-start;
-	margin-bottom: 26px;
+display: flex;
+flex-direction: column;
+width: 100%;
+margin-bottom: 0.8rem;
 }
 
+
 form input {
-	width: 100%;
-	height: 68px;
-	border: none;
-	border-radius: 5px;
+width: 100%;
+height: 68px;
+border: none;
+border-radius: 5px;
+
+}
+
+.text-control {
+height: 50px;
+color: #312e2e;
+font-size: 1.5rem;
+line-height: 1;
+}
+
+#txtMsg{
+	height: 100px;
 }
 
 form textarea {
-	width: 100%;
-	height: 68px;
-	border: none;
-	border-radius: 5px;
-	resize: vertical;
+width: 100%;
+border: none;
+border-radius: 5px;
+resize: vertical;
 }
+
+.submit_button{
+	margin: 15px auto;
+}
+.msgError{
+font-size: 1.2em;
+color: #901c1c ;
+font-weight: bold;
+margin: 0;
+padding-top:0.5em;
+}
+.hidden {
+display: none;
+opacity: 0;
+  }
+.visible {
+display: flex;
+opacity: 1;
+  }
