--- a/css/photographer.css
+++ b/css/photographer.css
@@ -113,25 +113,38 @@ vertical-align: baseline;
 width: 100%;
 height: 50px;
 display: flex;
-justify-content: space-between;
 align-items: center;
 background-color: white;
 
 }
 
-.titlePhoto {
+.titlePhoto{
 font-size: 16px;
 font-weight: bold;
 color: #901c1c;
-text-align: center;
-padding: 0 10px ;
+padding-left:  5px ;
+width: 60%;
+overflow: hidden;
+text-overflow: ellipsis;
+white-space: nowrap;
 }
 
 .like{
 font-weight: bold;
 font-size: 16px;
 color: #901c1c;
-padding: 0 10px 
+padding-left: 100px;
+padding-right: 5px;
+}
+
+.heart{
+font-weight: bold;
+font-size: 16px;
+color: #901c1c;
+padding: 0 5px 0 5px ;
+
+cursor: pointer;
+
 }
 
 
@@ -268,13 +281,16 @@ padding-top:0.5em;
 	padding:0 10px 0 10px ;
 	font-size: 1.1rem;
 
+
   }
   
   .artistePrice{
 	order:2;
   }
-  .TotalLikes{
+  .iconHeart{
 	order:1;
+	padding-right: 80px;
+
   }
 
 
