--- a/css/photographer.css
+++ b/css/photographer.css
@@ -21,6 +21,7 @@
 	flex-direction: row;
 
 }
+
 .infosphotographe{
 	display: flex; 
 	justify-content: space-between;
@@ -62,6 +63,16 @@
 	border-radius: 5px;
 }
 
+.contact_button:hover {
+	background-color: #DB8876;
+	color: #000000;
+}
+
+.contact_button:focus
+{
+	background-color: #DB8876;
+	color: #000000;
+}
 /* ******** */
 .photographermedia_section{
 display: flex;
@@ -135,6 +146,7 @@ font-size: 16px;
 color: #901c1c;
 padding-left: 100px;
 padding-right: 5px;
+
 }
 
 .heart{
@@ -142,24 +154,27 @@ font-weight: bold;
 font-size: 16px;
 color: #901c1c;
 padding: 0 5px 0 5px ;
-
 cursor: pointer;
 
 }
 
 
 /***modal form***/
+
+.no-scroll {
+	overflow: hidden;
+ }
 #contact_modal {
-	display: none;
-    position: fixed;
-    justify-content: center;
-    align-items: center;
-    top: 0px;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    background-color: rgba(0, 0, 0, 0.5);
+display: none;
+position: fixed;
+justify-content: center;
+align-items: center;
+top: 0px;
+left: 0;
+width: 100%;
+height: 100%;
+z-index: 1;
+background-color: rgba(0, 0, 0, 0.5);
 }
 .modal {
 border-radius: 5px;
@@ -194,7 +209,9 @@ padding-top: 10px;
 width: 35px;
 }
 
-
+.close:hover{
+	background-color: #901c1c;
+}
 
 .modal header h2 {
 font-size: 2.7em;
@@ -268,51 +285,124 @@ padding-top:0.5em;
 
 
 .infoPrixAvis{
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	position: fixed;
-	bottom:0px;
-	right:260px;
-	height:50px;
-	width: 300px;
-	background-color: #db8876;
-	color: black;
-	padding:0 10px 0 10px ;
-	font-size: 1.1rem;
-
-
+display: flex;
+justify-content: space-around;
+align-items: center;
+position: fixed;
+bottom:0px;
+right:260px;
+height:50px;
+width: 300px;
+background-color: #db8876;
+color: black;
+padding:0 10px 0 10px ;
+font-size: 1.1rem;
   }
   
-  .artistePrice{
-	order:2;
-  }
-  .iconHeart{
-	order:1;
-	padding-right: 80px;
+.artistePrice{
+order:2;
+}
+.iconHeart{
+order:1;
+padding-right: 100px;
+}
 
-  }
+.heart:hover{
+font-size: 22px;
+}
 
+/* select Options */
 
 #select {
-    margin: 20px 100px;
+margin: 20px 100px;
 }
 
 #select > label {
-    margin-right: 25px;
-    font-weight: bold;
+
+margin-right: 25px;
+font-weight: bold;
+
 }
 
-#select > label {
-    margin-right: 25px;
-    font-weight: bold;
-}
 
-#orderSelect {
+#orderSelect{
 	height: 50px;
+	width: 150px;
 	padding: 0 10px;
 	background-color: #901c1c;
 	border-radius: 5px;
 	color: white;
+    font-size: 1.13em;
+	/* appearance: none; */
+
 }
-  
+select:focus > option:checked { 
+    background:  #db8876 !important;
+
+}
+  /* ************************** */
+
+  #lightbox{
+	position: fixed;
+	width: 100vw;
+	height: 100vh;
+	background-color: #5a5a5a80 ;
+	top: 0px;
+	left: 0px;
+	display: none;
+	justify-content: center;
+	align-items: center;
+  }
+
+  #lightbox.show{
+	display: flex;
+  }
+
+  #lightbox .closeLight {
+	width: 50px;
+	display: flex;
+	flex-direction: column-reverse;
+    position: fixed;
+	color: #901c1c;
+	top: 10%;
+   left: 73%;
+   background-color: transparent;
+  }
+
+  #lightbox .next, .previous{
+	display: flex;
+	font-size: 5em;
+	flex-direction: column-reverse;
+    background-color: transparent;
+	color:#901c1c;
+	border: none;
+    padding-bottom: 30%;
+  }
+
+  #lightbox .content {
+	width: 50%;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	gap: 20px;
+  }
+
+  #lightbox .content .picture{
+	width: 100%;
+    
+	
+  }
+  .photoBox {
+   width: 100%;
+	height: 100%;
+	max-height : 800px;
+	border-radius: 50px;
+	vertical-align: baseline;
+	margin: auto;
+  }
+  .picture img{
+	object-fit: cover;	object-position: center;
+	object-position: center;
+	vertical-align: baseline;
+	padding-bottom: 10%;
+  } 
