--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
     max-width: 1440px;
     font-family: "DM Sans", sans-serif;
     margin: auto;
+   
 }
 
 
@@ -30,8 +31,8 @@ h1 {
 .photographer_section {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 50px;
-    margin-top:50px;
+    gap: 30px;
+    margin-top: 2rem;
 }
 
 .photographer_section .card_photographer {
@@ -51,39 +52,38 @@ h1 {
 
 .photographer_section .photographerName {
     color: #D3573C;
-    font-size: 2em;
-    margin: 5% 0 0% 0;
+    margin: 5% 0 2% 0;
     display: flex;
     justify-content: center;
+    font-size: 2.7rem;
+    font-weight: 400;
    
 }
 .photographer_section .photographerCity {
     display: flex;
     justify-content: center;
     color: #901c1c;
-    font-weight: 700;
-    text-transform: capitalize;
-    font-style: normal;
-    font-size: 1rem;
+    /* text-transform: capitalize; */
+    font-size: 1.5rem;
+    line-height: 1.7rem;
+    font-weight: 500;
 }
 
 .photographer_section .slogan {
     color: #000000;
     display: flex;
     justify-content: center;
-    font-size: 0.8rem;
-    font-weight: 600;
-    margin: 1% 0;
+    font-size: 1.2rem;
+    line-height: 1.7rem;
    
 }
 .photographer_section .prix {
     color: #757575;
     display: flex;
   justify-content: center;
-  font-size: 0.7rem;
+  font-size: 1.2rem;
   font-weight: 500;
-    margin: 2% 0;
-   
+  line-height: 1.7rem;
 }
 .photographer_section  .divPortrait{
     display: flex;
@@ -109,3 +109,13 @@ h1 {
   text-decoration: none;
   cursor: pointer;
 }
+@media (max-width: 900px) { 
+
+
+	.photographer_section {
+		display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+
+	}
+ }
