--- a/css/photographer.css
+++ b/css/photographer.css
@@ -373,9 +373,9 @@ select:focus > option:checked {
 
   #lightbox{
 	position: fixed;
-	width: 100vw;
-	height: 100vh;
-	background-color: #5a5a5a80 ;
+	width: 100%;
+	height:100%;
+	background-color: white ;
 	top: 0px;
 	left: 0px;
 	display: none;
@@ -388,50 +388,92 @@ select:focus > option:checked {
   }
 
   #lightbox .closeLight {
-	width: 50px;
-	display: flex;
-	flex-direction: column-reverse;
-    position: fixed;
 	color: #901c1c;
-	top: 10%;
-   left: 73%;
-   background-color: transparent;
+   top: 2rem;
+    right: 2rem;
+    float: right;
+	height: 3rem;
+    width: 3rem;
+    font-size: 2rem;
+    background: none;
+    border: none;
+    position: absolute;
+	display: block;
+
   }
 
-  #lightbox .next, .previous{
-	display: flex;
-	font-size: 5em;
-	flex-direction: column-reverse;
-    background-color: transparent;
+  #lightbox  h3{
+height: 2.5rem;
+align-items: center;
+display: flex;
+padding-left: 10px;
+  
+  }
+
+  .TitreMed{
+	font-size: 1.3rem;
+	color:#901c1c;
+	font-weight: 500;
+  }
+
+  .previous{
+	float: left;
+    left: 2rem;
+	top: 20rem;
+	height: 4rem;
+    width: 4rem;
+    font-size: 4rem;
 	color:#901c1c;
 	border: none;
-    padding-bottom: 30%;
+	background-color: transparent;
+	position: absolute;
+  }
+  .next{
+	float: right;
+    right: 2rem;
+	top: 20rem;
+	height: 4rem;
+    width: 4rem;
+    font-size: 4rem;
+	color:#901c1c;
+	border: none;
+	background-color: transparent;
+	position: absolute;
   }
 
   #lightbox .content {
 	width: 50%;
+	height: 90%;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 	gap: 20px;
   }
 
-  #lightbox .content .picture{
-	width: 100%;
-    
-	
+ .picture{
+	width: 80%;
+	margin: auto;
+	object-fit: cover;
   }
   .photoBox {
-   width: 100%;
-	height: 100%;
-	max-height : 800px;
-	border-radius: 50px;
-	vertical-align: baseline;
-	margin: auto;
+	display: block;
+    margin: 0 auto;
+    padding: 1.5rem;
+    height: 90vh;
+	
   }
-  .picture img{
-	object-fit: cover;	object-position: center;
-	object-position: center;
-	vertical-align: baseline;
-	padding-bottom: 10%;
+
+  #lightbox img{
+	border-radius: 5px;
+	width: 60rem;
+    height: 60rem;
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+    object-fit: cover;
   } 
+
+  video{
+	height: 40rem;
+    width: 40rem;
+  }
