--- a/css/photographer.css
+++ b/css/photographer.css
@@ -13,6 +13,9 @@
 	background-color: #fafafa;
 
 }
+.header{
+	margin-top: 20px;
+}
 
 .photograph_infos .container_photo{
 	display: flex; 
@@ -317,6 +320,8 @@ padding-top:0.5em;
 display: flex;
 justify-content: space-around;
 align-items: center;
+border-top-left-radius: 10px;
+border-top-right-radius: 10px;
 position: fixed;
 bottom:0px;
 right:260px;
@@ -326,7 +331,7 @@ background-color: #db8876;
 color: black;
 padding:0 10px 0 10px ;
 font-size: 1.1rem;
-  }
+}
   
 .artistePrice{
 order:2;
@@ -389,12 +394,12 @@ select:focus > option:checked {
 
   #lightbox .closeLight {
 	color: #901c1c;
-   top: 2rem;
-    right: 2rem;
+   top: 5rem;
+    right: 11rem;
     float: right;
 	height: 3rem;
     width: 3rem;
-    font-size: 2rem;
+    font-size: 4rem;
     background: none;
     border: none;
     position: absolute;
@@ -418,11 +423,11 @@ padding-left: 10px;
 
   .previous{
 	float: left;
-    left: 2rem;
-	top: 20rem;
-	height: 4rem;
-    width: 4rem;
-    font-size: 4rem;
+    left: 10rem;
+	top: 25rem;
+	height: 6rem;
+    width: 6rem;
+    font-size: 5rem;
 	color:#901c1c;
 	border: none;
 	background-color: transparent;
@@ -430,11 +435,11 @@ padding-left: 10px;
   }
   .next{
 	float: right;
-    right: 2rem;
-	top: 20rem;
-	height: 4rem;
-    width: 4rem;
-    font-size: 4rem;
+    right: 10rem;
+	top: 25rem;
+	height: 6rem;
+    width: 6rem;
+    font-size: 5rem;
 	color:#901c1c;
 	border: none;
 	background-color: transparent;
@@ -443,17 +448,12 @@ padding-left: 10px;
 
   #lightbox .content {
 	width: 50%;
-	height: 90%;
 	display: flex;
-	flex-direction: row;
 	justify-content: center;
-	gap: 20px;
   }
 
  .picture{
-	width: 80%;
 	margin: auto;
-	object-fit: cover;
   }
   .photoBox {
 	display: block;
@@ -465,13 +465,14 @@ padding-left: 10px;
 
   #lightbox img{
 	border-radius: 5px;
-	width: 60rem;
-    height: 60rem;
+	width: 65rem;
+    height: 56rem;
     max-width: 100%;
     max-height: 100%;
     display: block;
     object-fit: cover;
   } 
+
 
   video{
 	height: 40rem;
