--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ h1 {
     margin: 5% 0 2% 0;
     display: flex;
     justify-content: center;
-    font-size: 2.7rem;
+    font-size: 2.25rem;
     font-weight: 400;
    
 }
@@ -64,8 +64,8 @@ h1 {
     justify-content: center;
     color: #901c1c;
     /* text-transform: capitalize; */
-    font-size: 1.5rem;
-    line-height: 1.7rem;
+    font-size: 1.2rem;
+    line-height: 1rem;
     font-weight: 500;
 }
 
@@ -73,17 +73,17 @@ h1 {
     color: #000000;
     display: flex;
     justify-content: center;
-    font-size: 1.2rem;
-    line-height: 1.7rem;
-   
+    font-size: 1rem;
+    line-height: 1.5rem;
+    font-weight: 500;
 }
 .photographer_section .prix {
     color: #757575;
     display: flex;
   justify-content: center;
-  font-size: 1.2rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
   font-weight: 500;
-  line-height: 1.7rem;
 }
 .photographer_section  .divPortrait{
     display: flex;
