--- a/css/photographer.css
+++ b/css/photographer.css
@@ -2,9 +2,12 @@
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
-  }
+}
 
 /* css header page photographer */
+#main{
+	display: block;
+}
 
 .photograph-header .container_photo{
 	height: 300px;
@@ -17,12 +20,12 @@
 	margin-top: 20px;
 }
 
+/* sec tion info photographe */
 .photograph_infos .container_photo{
 	display: flex; 
 	justify-content: space-between;
 	align-items: center; 
 	flex-direction: row;
-
 }
 
 .infosphotographe{
@@ -104,16 +107,14 @@
 
 	}
  }
-/* ******** */
-#main{
-	display: block;
-}
+/* **section media photographe****** */
+
 .photographermedia_section{
-display: flex;
-flex-wrap: wrap;
-justify-content: space-evenly;
-margin: 0;
-padding: 30px 50px 50px 50px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+	margin: 0;
+	padding: 30px 50px 50px 50px;
 }
 
 .photographermedia_section a{
@@ -121,176 +122,172 @@ padding: 30px 50px 50px 50px;
 	text-decoration: none;
 }
 
-
 .article_media {
-width: 400px;
-height:400px;
-background-color: #fafafa;
-margin: 20px;
-display: flex;
-flex-direction: column;
-justify-content: space-between;
-align-items: center;
-border-radius: 5px;
-overflow: hidden;
+	width: 400px;
+	height:400px;
+	background-color: #fafafa;
+	margin: 20px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	border-radius: 5px;
+	overflow: hidden;
 }
 
 .div_media{
-width: 100%;
-height: 100%;
-overflow: hidden;
-background-color: white;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	background-color: white;
 }
 
 .photo {
-width: 100%;
-height: 100%;
-max-width : 400px;
-min-height : 356px;
-object-fit: cover;
-object-position: center;
-cursor: pointer;
-border-radius: 5px;
-vertical-align: baseline;
+	width: 100%;
+	height: 100%;
+	max-width : 400px;
+	max-height : 400px;
+	object-fit: cover;
+	object-position: center;
+	cursor: pointer;
+	border-radius: 5px;
+	vertical-align: baseline;
 }
 
 .infoPhoto{
-width: 100%;
-height: 50px;
-display: flex;
-align-items: center;
-background-color: white;
+	width: 100%;
+	height: 50px;
+	display: flex;
+	align-items: center;
+	background-color: white;
 
 }
 
 .titlePhoto{
-font-size: 20px ;
-font-weight: 400;
-color: #901c1c;
-padding-left:  5px ;
-width: 60%;
-overflow: hidden;
-text-overflow: ellipsis;
-white-space: nowrap;
+	font-size: 20px ;
+	font-weight: 400;
+	color: #901c1c;
+	padding-left:  5px ;
+	width: 60%;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 .like{
-font-weight: bold;
-font-size: 16px;
-color: #901c1c;
-padding-left: 100px;
-padding-right: 5px;
+	font-weight: bold;
+	font-size: 16px;
+	color: #901c1c;
+	padding-left: 100px;
+	padding-right: 5px;
 
 }
 
 .heart{
-font-weight: bold;
-font-size: 16px;
-color: #901c1c;
-padding: 0 5px 0 5px ;
-cursor: pointer;
-
+	font-weight: bold;
+	font-size: 16px;
+	color: #901c1c;
+	padding: 0 5px 0 5px ;
+	cursor: pointer;
 }
 
-
-/***modal form***/
+/***modal form contact***/
 
 #contact_modal {
-display: none;
-position: fixed;
-justify-content: center;
-align-items: center;
-top: 0px;
-left: 0;
-width: 100%;
-height: 100%;
-overflow: auto;
-z-index: 1;
-background-color: rgba(0, 0, 0, 0.5);
+	display: none;
+	position: fixed;
+	justify-content: center;
+	align-items: center;
+	top: 0px;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	z-index: 1;
+	background-color: rgba(0, 0, 0, 0.5);
 }
 .modal {
-border-radius: 5px;
-background-color: #db8876;
-height: fit-content;
-width: 50%;
-margin: auto;
-border-radius: 10px;
-display: flex;
-flex-direction: column;
-position: relative;
-top: 5%;
-padding: 5px 35px;
-box-sizing: border-box;
+	border-radius: 5px;
+	background-color: #db8876;
+	height: fit-content;
+	width: 50%;
+	margin: auto;
+	border-radius: 10px;
+	display: flex;
+	flex-direction: column;
+	position: relative;
+	top: 5%;
+	padding: 5px 35px;
+	box-sizing: border-box;
 }
 
 .modal header {
-justify-content: space-between;
-align-content: start;
-width: 100%;
-padding-top: 15px;
-height: 10%;
-box-sizing: content-box;	
-
+	justify-content: space-between;
+	align-content: start;
+	width: 100%;
+	padding-top: 15px;
+	height: 10%;
+	box-sizing: content-box;	
 }
 
 .close {
-cursor: pointer;
-display: flex;
-align-self: flex-start;
-padding-top: 10px;
-width: 35px;
-}
+	cursor: pointer;
+	display: flex;
+	align-self: flex-start;
+	padding-top: 10px;
+	width: 35px;
+	}
 
 .close:hover{
 	background-color: #901c1c;
 }
 
 .modal header h2 {
-font-size: 2.7em;
-font-weight: normal;
-margin:inherit;
+	font-size: 2.7em;
+	font-weight: normal;
+	margin:inherit;
 }
 
 #modalTitle{
-text-align: center;	
+	text-align: center;	
 }
+
 form {
-width: 100%;
-display: flex;
-flex-direction: column;
-align-items: flex-start;
-padding-bottom: 20px;
-padding-top: 5%;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	padding-bottom: 20px;
+	padding-top: 5%;
 }
 
 form label {
-color: #312e2e;
-font-size: 1.5rem;
-line-height: 1;
-margin-bottom: 8px;
+	color: #312e2e;
+	font-size: 1.5rem;
+	line-height: 1;
+	margin-bottom: 8px;
 }
 
 form div {
-display: flex;
-flex-direction: column;
-width: 100%;
-margin-bottom: 0.8rem;
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	margin-bottom: 0.8rem;
 }
 
 
 form input {
-width: 100%;
-height: 68px;
-border: none;
-border-radius: 5px;
-
+	width: 100%;
+	height: 68px;
+	border: none;
+	border-radius: 5px;
 }
 
 .text-control {
-height: 50px;
-color: #312e2e;
-font-size: 1.5rem;
-line-height: 1;
+	height: 50px;
+	color: #312e2e;
+	font-size: 1.5rem;
+	line-height: 1;
 }
 
 #txtMsg{
@@ -298,64 +295,62 @@ line-height: 1;
 }
 
 form textarea {
-width: 100%;
-border: none;
-border-radius: 5px;
-resize: vertical;
+	width: 100%;
+	border: none;
+	border-radius: 5px;
+	resize: vertical;
 }
 
 .submit_button{
 	margin: 15px auto;
 }
 .msgError{
-font-size: 1.2em;
-color: #901c1c ;
-font-weight: bold;
-margin: 0;
-padding-top:0.5em;
+	font-size: 1.2em;
+	color: #901c1c ;
+	font-weight: bold;
+	margin: 0;
+	padding-top:0.5em;
 }
 
-
 .infoPrixAvis{
-display: flex;
-justify-content: space-around;
-align-items: center;
-border-top-left-radius: 10px;
-border-top-right-radius: 10px;
-position: fixed;
-bottom:0px;
-right:260px;
-height:50px;
-width: 300px;
-background-color: #db8876;
-color: black;
-padding:0 10px 0 10px ;
-font-size: 1.1rem;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	position: fixed;
+	bottom:0px;
+	right:260px;
+	height:50px;
+	width: 300px;
+	background-color: #db8876;
+	color: black;
+	padding:0 10px 0 10px ;
+	font-size: 1.1rem;
 }
   
 .artistePrice{
-order:2;
+	order:2;
 }
 .iconHeart{
-order:1;
-padding-right: 100px;
+	order:1;
+	padding-right: 100px;
 }
 
 .heart:hover{
 font-size: 22px;
+color: #D3573C;
 }
 
 /* select Options */
 
 #select {
-margin: 20px 100px;
+	margin: 20px 100px;
 }
 
 #select > label {
-
-margin-right: 25px;
-font-weight: bold;
-
+	margin-right: 25px;
+	font-weight: bold;
 }
 
 
@@ -368,15 +363,15 @@ font-weight: bold;
 	color: white;
     font-size: 1.13em;
 	/* appearance: none; */
-
 }
 select:focus > option:checked { 
     background: #901c1c !important;
 	color: #901c1c !important;
 }
-  /* ************************** */
 
-  #lightbox{
+/* ***********css lightbox*************** */
+
+#lightbox{
 	position: fixed;
 	width: 100%;
 	height:100%;
@@ -386,95 +381,93 @@ select:focus > option:checked {
 	display: none;
 	justify-content: center;
 	align-items: center;
-  }
+}
 
-  #lightbox.show{
+#lightbox.show{
 	display: flex;
-  }
+}
 
-  #lightbox .closeLight {
+#lightbox .closeLight {
 	color: #901c1c;
-   top: 5rem;
-    right: 11rem;
-    float: right;
+	top: 5rem;
+	right: 16rem;
+	float: right;
 	height: 3rem;
-    width: 3rem;
-    font-size: 4rem;
-    background: none;
-    border: none;
-    position: absolute;
+	width: 3rem;
+	font-size: 4rem;
+	background: none;
+	border: none;
+	position: absolute;
 	display: block;
+}
 
-  }
+#lightbox  h3{
+	height: 2.5rem;
+	align-items: center;
+	display: flex;
+	padding-left: 10px;
+}
 
-  #lightbox  h3{
-height: 2.5rem;
-align-items: center;
-display: flex;
-padding-left: 10px;
-  
-  }
-
-  .TitreMed{
+.TitreMed{
 	font-size: 1.3rem;
 	color:#901c1c;
 	font-weight: 500;
-  }
+}
 
-  .previous{
+.previous{
 	float: left;
-    left: 10rem;
+	left: 15rem;
 	top: 25rem;
 	height: 6rem;
-    width: 6rem;
-    font-size: 5rem;
+	width: 6rem;
+	font-size: 5rem;
 	color:#901c1c;
 	border: none;
 	background-color: transparent;
 	position: absolute;
-  }
-  .next{
-	float: right;
-    right: 10rem;
-	top: 25rem;
-	height: 6rem;
-    width: 6rem;
-    font-size: 5rem;
-	color:#901c1c;
-	border: none;
-	background-color: transparent;
-	position: absolute;
-  }
+}
 
-  #lightbox .content {
+.next{
+	float: right;
+	right: 15rem;
+	top: 25rem;
+	height: 6rem;
+	width: 6rem;
+	font-size: 5rem;
+	color:#901c1c;
+	border: none;
+	background-color: transparent;
+	position: absolute;
+}
+
+#lightbox .content {
 	width: 50%;
 	display: flex;
 	justify-content: center;
-  }
+}
 
- .picture{
+.picture{
 	margin: auto;
-  }
-  .photoBox {
+}
+.photoBox {
 	display: block;
-    margin: 0 auto;
-    padding: 1.5rem;
-    height: 90vh;
-	
-  }
+	margin: 0 auto;
+	padding: 1.5rem;
+	height: 90vh;
 
-  #lightbox img{
+}
+
+#lightbox img{
 	border-radius: 5px;
 	width: 65rem;
-    height: 56rem;
-    max-width: 100%;
-    max-height: 100%;
-    display: block;
-    object-fit: cover;
-  } 
+	height: 56rem;
+	max-width: 100%;
+	max-height: 100%;
+	display: block;
+	object-fit: cover;
+} 
 
-
-  video{
+video{
 	height: 40rem;
-    width: 40rem;
-  }
+	width: 40rem;
+}
