--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,7 @@ body {
     max-width: 1440px;
     font-family: "DM Sans", sans-serif;
     margin: auto;
-   
 }
-
 
 header {
     display: flex;
@@ -27,7 +25,7 @@ h1 {
     height: 50px;
     margin-left: 100px;
 }
-
+/* main */
 .photographer_section {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -106,11 +104,10 @@ h1 {
 
 
 .photographer_section .card_photographer  a {
-  text-decoration: none;
-  cursor: pointer;
+    text-decoration: none;
+    cursor: pointer;
 }
 @media (max-width: 900px) { 
-
 
 	.photographer_section {
 		display: flex;
